--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="home.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
@@ -66,7 +66,9 @@
     </header>
     <section>
       <div class="container-fluid">
-        <h1 class="text-center text-capitalize mt-5">about us</h1>
+        <h1 class="font-about text-center text-capitalize mt-5">
+          about us <img src="images/heart.png" class="love_heart" />
+        </h1>
         <hr class="w-25 mx-auto pt-5" />
 
         <div class="row mb-5">
@@ -76,7 +78,7 @@
           <div class="col-lg-6 col-md-6 col-12">
             <h1>Who am I</h1>
             <hr />
-            <p>
+            <p class="mx-auto pt-3">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
               vitae modi quod itaque dolorum, qui doloremque nesciunt, voluptas
               blanditiis minus rerum a dicta ratione? Iste velit amet dolore
@@ -88,10 +90,13 @@
               maxime, laborum eum reprehenderit rerum cupiditate doloribus
               suscipit at quo.
             </p>
-            <button class="btn bg-primary">Wanna Know Me</button>
+            <button class="btn bg-primary mx-auto pt-3">Wanna Know Me</button>
           </div>
         </div>
       </div>
     </section>
+    <footer>
+      <p class="text-center text-white bg-dark">@copyright sweb.com 2021</p>
+    </footer>
   </body>
 </html>
