--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="home.html"
                 >Home <span class="sr-only">(current)</span></a
               >
@@ -43,7 +43,7 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
@@ -130,5 +130,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p class="text-center text-white bg-dark">@copyright sweb.com 2021</p>
+    </footer>
   </body>
 </html>
