--- a/home.html
+++ b/home.html
@@ -121,7 +121,9 @@
     <!-- about -->
     <section>
       <div class="container-fluid">
-        <h1 class="text-center text-capitalize mt-5">about us</h1>
+        <h1 class="font-about text-center text-capitalize mt-5">
+          about us <img src="images/heart.png" class="love_heart" />
+        </h1>
         <hr class="w-25 mx-auto pt-5" />
 
         <div class="row mb-5">
@@ -131,7 +133,7 @@
           <div class="col-lg-6 col-md-6 col-12">
             <h1>Who am I</h1>
             <hr />
-            <p>
+            <p class="mx-auto pt-3">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
               vitae modi quod itaque dolorum, qui doloremque nesciunt, voluptas
               blanditiis minus rerum a dicta ratione? Iste velit amet dolore
@@ -143,7 +145,7 @@
               maxime, laborum eum reprehenderit rerum cupiditate doloribus
               suscipit at quo.
             </p>
-            <button class="btn bg-primary">Wanna Know Me</button>
+            <button class="btn bg-primary mx-auto pt-3">Wanna Know Me</button>
           </div>
         </div>
       </div>
@@ -189,6 +191,11 @@
         <div>
           <h3 class="display-4">+91 2345986532</h3>
           <p>if you want best service call us now</p>
+          <!-- <div>
+            <div class="batman_contact">
+              <img src="images/battman.png" alt="battman" />
+            </div> -->
+          </div>
           <button class="btn btn-warning">Contact Now</button>
         </div>
       </article>
