--- a/service.html
+++ b/service.html
@@ -35,7 +35,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="home.html"
                 >Home <span class="sr-only">(current)</span></a
               >
@@ -46,7 +46,7 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="service.html">Service</a>
             </li>
           </ul>
@@ -66,10 +66,10 @@
     </header>
     <section>
       <div class="container">
-        <h1 class="text-center text-capitalize my-5">services</h1>
+        <h1 class="text-center text-capitalize mt-5">services</h1>
         <hr class="w-25 mx-auto pt-5" />
         <div class="row text-center mb-5">
-          <div class="col-lg-4 col-md-4 c0l-12">
+          <div class="col-lg-4 col-md-4 col-12">
             <img src="images/about-bcg.jpeg" class="img-fluid" />
             <h4 class="text-center text-capitalize mt-3">web developer</h4>
             <p class="text-center text-capitalize">some example</p>
@@ -77,7 +77,7 @@
               See Profile
             </button>
           </div>
-          <div class="col-lg-4 col-md-4 c0l-12">
+          <div class="col-lg-4 col-md-4 col-12">
             <img src="images/about-bcg.jpeg" class="img-fluid" />
             <h4 class="text-center text-capitalize mt-3">web developer</h4>
             <p class="text-center text-capitalize">some example</p>
@@ -85,7 +85,7 @@
               See Profile
             </button>
           </div>
-          <div class="col-lg-4 col-md-4 c0l-12">
+          <div class="col-lg-4 col-md-4 col-12">
             <img src="images/about-bcg.jpeg" class="img-fluid" />
             <h4 class="text-center text-capitalize mt-3">web developer</h4>
             <p class="text-center text-capitalize">some example</p>
@@ -96,5 +96,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p class="text-center text-white bg-dark">@copyright sweb.com 2021</p>
+    </footer>
   </body>
 </html>
